fix expanded mentions spacing

--- a/src/components/mentions_line/mentions_line.scss
+++ b/src/components/mentions_line/mentions_line.scss
@@ -4,6 +4,7 @@
     color: var(--link);
   }
 
+  .fullExtraMentions,
   .mention-link:not(:last-child) {
     margin-right: 0.25em;
   }
